--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-hook-form": "^7.22.5",
+    "react-icons": "^4.3.1",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
